# rc-bench

./: .gitignore  CMakeLists.txt  README.md  log
.github/workflows/: c-cpp.yml
benchmarks/templates/: dense_linalg.mlir.in  dense_rc.mlir.in
include/rc/Conversion/RcToLinalg/: Passes.h  Passes.td  RcToLinalg.h
include/rc/Dialect/Rc/: RcDialect.h  RcOps.h  RcOps.td
lib/: CMakeLists.txt
lib/Conversion/RcToLinalg/: Passes.cpp  RcToLinalg.cpp
lib/Dialect/Rc/: RcDialect.cpp  RcOps.cpp
lib/Tools/: rc-opt.cpp
results_phase1/llvm/: dense_B_N1024_B1.ll  dense_B_N1024_B16.ll  dense_B_N512_B1.ll  dense_B_N512_B16.ll
results_phase1/mlir/: dense_A_low_N1024_B1.mlir  dense_A_low_N1024_B16.mlir  dense_A_low_N512_B1.mlir  dense_A_low_N512_B16.mlir  dense_A_rc_N1024_B1.mlir  dense_A_rc_N1024_B16.mlir  dense_A_rc_N512_B16.mlir  dense_B_linalg_N512_B1.mlir  dense_B_llvm_N1024_B1.mlir  dense_B_llvm_N1024_B16.mlir  dense_B_llvm_N512_B1.mlir  dense_B_llvm_N512_B16.mlir
runtime/: driver.cpp  driver_esn.cpp  rc_metrics.c  rc_runtime.c
scripts/: build_and_run.py  gen_case.py  gen_esn_assets.py  verify_esn_ref.py
